feat: Complete UI/UX upgrade with React + Vite + Tailwind CSS
- Added modern React frontend with Vite build system
- Implemented Tailwind CSS v4 with custom dark theme
- Created component architecture: Layout, Sidebar, Header
- Built authentication with modern UI and animations
- Created Dashboard with KPI cards and Chart.js charts
- Built all ERP modules: Producers, Collections, Finance, Inventory,
  Employees, Customers, Suppliers, Projects, Reports, Settings
- Added API client with axios and error handling
- Implemented responsive design with mobile navigation
- Added Framer Motion animations and transitions
- New modern dark theme with cyan/purple gradient accents

--- a/.env.example
+++ b/.env.example
@@ -14,6 +14,17 @@ DB_PATH=./data/scck_erp.db
 DB_TYPE=sqlite
 
 # ============================================
+# Supabase Configuration (Optional)
+# ============================================
+# To use Supabase instead of SQLite:
+# 1. Set DB_TYPE=supabase
+# 2. Add your Supabase credentials below
+# Get values from: Project Settings > API in Supabase dashboard
+# SUPABASE_URL=https://your-project.supabase.co
+# SUPABASE_ANON_KEY=your-anon-key
+# SUPABASE_SERVICE_KEY=your-service-role-key
+
+# ============================================
 # Security & Authentication
 # ============================================
 # Generate with: openssl rand -base64 32
