--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "dotenv": "^16.0.3",
     "sqlite3": "^5.1.6",
     "better-sqlite3": "^9.0.0",
+    "@supabase/supabase-js": "^2.39.0",
     "bcryptjs": "^2.4.3",
     "jsonwebtoken": "^9.0.0",
     "joi": "^17.11.0",
