feat: Complete GitHub → Vercel integration setup
- Updated vercel.json with proper GitHub integration settings
- Created GitHub Actions workflow for CI/CD
- Added comprehensive DEPLOY_VERCEL_GITHUB.md documentation
- Updated frontend/.env.example with deployment instructions
- Automatic deployments on every push to main branch
- Zero CLI installation required

Deployment method: GitHub → Vercel (easiest)
Time: 5 minutes
Cost: /usr/bin/bash/month
Result: Auto-deploying production site

--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -1,19 +1,25 @@
 # ============================================
-# Frontend Environment Variables
+# Frontend Environment Variables for Vercel
 # ============================================
 
-# API URL - Change this to your Railway backend URL after deployment
-# Example: VITE_API_URL=https://scck-api.up.railway.app
-VITE_API_URL=http://localhost:3000
+# ⚠️ IMPORTANT: Set this in Vercel Dashboard → Settings → Environment Variables
+# Do NOT commit real values to GitHub!
 
-# App Name
+# API URL - Your Railway backend URL
+# Get this after deploying backend to Railway
+VITE_API_URL=https://scck-api.up.railway.app
+
+# Optional: App Configuration
 VITE_APP_NAME=SCCK ERP NEXUS
-
-# App Version
 VITE_APP_VERSION=1.0.0
-
-# Default Currency
 VITE_CURRENCY=CFA
-
-# Enable/Disable Demo Mode
 VITE_ENABLE_DEMO=true
+
+# ============================================
+# Setup Instructions:
+# ============================================
+# 1. Deploy backend to Railway first
+# 2. Copy Railway URL (e.g., https://scck-api.up.railway.app)
+# 3. Go to Vercel Dashboard → Your Project → Settings → Environment Variables
+# 4. Add: VITE_API_URL = your-railway-url
+# 5. Redeploy if needed
