--- a/vercel.json
+++ b/vercel.json
@@ -1,12 +1,10 @@
 {
-  "$schema": "https://openapi.vercel.sh/vercel.json",
   "version": 2,
-  "name": "scck-erp-frontend",
-  "framework": "vite",
-  "buildCommand": "npm run build",
+  "name": "scck-erp-nexus",
+  "buildCommand": "cd frontend && npm install && npm run build",
   "outputDirectory": "frontend/dist",
   "installCommand": "npm install",
-  "devCommand": "npm run dev",
+  "framework": "vite",
   "rewrites": [
     {
       "source": "/(.*)",
@@ -32,7 +30,8 @@
       ]
     }
   ],
-  "env": {
-    "VITE_API_URL": "@api_url"
+  "github": {
+    "enabled": true,
+    "autoJobCancelation": true
   }
 }
