--- a/.github/workflows/deploy-vercel-github.yml
+++ b/.github/workflows/deploy-vercel-github.yml
@@ -1,38 +1,38 @@
-name: Deploy to Vercel
+name: Deploy Frontend to Vercel
 
 on:
   push:
-    branches: [ main ]
-  pull_request:
-    branches: [ main ]
+    branches: [ main, master ]
+    paths:
+      - 'frontend/**'
+      - '.github/workflows/deploy-vercel-github.yml'
+
+env:
+  VERCEL_ORG_ID: ${{ secrets.VERCEL_ORG_ID }}
+  VERCEL_PROJECT_ID: ${{ secrets.VERCEL_PROJECT_ID }}
 
 jobs:
-  vercel-deploy:
+  deploy:
     runs-on: ubuntu-latest
-    permissions:
-      contents: read
-      id-token: write
+    defaults:
+      run:
+        working-directory: ./frontend
     steps:
-      - name: Checkout
+      - name: Checkout repository
         uses: actions/checkout@v4
 
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: '18'
+          node-version: '20'
           cache: 'npm'
+          cache-dependency-path: frontend/package-lock.json
 
-      - name: Install frontend dependencies
-        run: |
-          cd frontend
-          npm ci
-        env:
-          VITE_API_URL: ${{ secrets.VITE_API_URL }}
+      - name: Install dependencies
+        run: npm install
 
-      - name: Build frontend
-        run: |
-          cd frontend
-          npm run build
+      - name: Build project
+        run: npm run build
         env:
           VITE_API_URL: ${{ secrets.VITE_API_URL }}
 
@@ -43,4 +43,4 @@ jobs:
           vercel-org-id: ${{ secrets.VERCEL_ORG_ID }}
           vercel-project-id: ${{ secrets.VERCEL_PROJECT_ID }}
           working-directory: ./frontend
-          vercel-args: --prod
+          vercel-args: '--prod --confirm'
