--- a/vercel.json
+++ b/vercel.json
@@ -1,37 +1,30 @@
 {
   "version": 2,
-  "name": "scck-erp-nexus",
-  "buildCommand": "cd frontend && npm install && npm run build",
-  "outputDirectory": "frontend/dist",
-  "installCommand": "npm install",
-  "framework": "vite",
-  "rewrites": [
-    {
-      "source": "/(.*)",
-      "destination": "/index.html"
+  "buildCommand": "npm run build",
+  "outputDirectory": ".vercel/output",
+  "framework": "express",
+  "env": {
+    "NODE_ENV": "production"
+  },
+  "envPrefix": "",
+  "functions": {
+    "api/index.js": {
+      "memory": 1024,
+      "maxDuration": 30
     }
-  ],
-  "headers": [
+  },
+  "routes": [
     {
-      "source": "/(.*)",
-      "headers": [
-        {
-          "key": "X-Frame-Options",
-          "value": "DENY"
-        },
-        {
-          "key": "X-Content-Type-Options",
-          "value": "nosniff"
-        },
-        {
-          "key": "Referrer-Policy",
-          "value": "strict-origin-when-cross-origin"
-        }
-      ]
+      "src": "^/api/.*",
+      "dest": "/api/index.js"
+    },
+    {
+      "src": "^/assets/(.*)$",
+      "dest": "/assets/$1"
+    },
+    {
+      "src": "^/(?!api|_next|assets|.*\\..*)",
+      "dest": "/src/index.html"
     }
-  ],
-  "github": {
-    "enabled": true,
-    "autoJobCancelation": true
-  }
+  ]
 }
